Bump to JDK 22