@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jzy3d</groupId>
 		<artifactId>panama-gl</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>panama-gl-ui-javafx</artifactId>
 	<packaging>jar</packaging>
 	<name>Panama GL UI - JavaFX</name>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>19</maven.compiler.release>
-		<javafx.version>19</javafx.version>
+		<javafx.version>22</javafx.version>
 	</properties>
+
 	<dependencies>
+		
+		<!-- JAVAFX -->
+
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-swing</artifactId>
-			<version>${javafx.version}</version>
-		</dependency>
 
-		
-		<dependency>
-    <groupId>org.testfx</groupId>
-    <artifactId>testfx-junit</artifactId>
-    <version>4.0.15-alpha</version>
-    <scope>test</scope>
-</dependency>
-		
+		<!-- PANAMA GL -->
+
 		<dependency>
 			<groupId>org.jzy3d</groupId>
 			<artifactId>panama-gl-api</artifactId>
@@ -51,14 +46,47 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jzy3d</groupId>
+			<artifactId>panama-gl-wrappers-linux</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jzy3d</groupId>
 			<artifactId>panama-gl-wrappers-windows</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<!-- TEST JARS -->
+		
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit</artifactId>
+			<version>4.0.15-alpha</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jzy3d</groupId>
+			<artifactId>panama-gl-wrappers-macos</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jzy3d</groupId>
 			<artifactId>panama-gl-wrappers-linux</artifactId>
 			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jzy3d</groupId>
+			<artifactId>panama-gl-wrappers-windows</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -67,19 +95,19 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>19</source>
-					<target>19</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
-						<arg>--enable-preview</arg>
-						<arg>--module-path="/Library/Java/JavaVirtualMachines/javafx-sdk-19.0.2.1/";"/Library/Java/JavaVirtualMachines/javafx-sdk-19.0.2.1/lib"</arg>
-						
+						<arg>
+							--module-path="/Library/Java/JavaVirtualMachines/javafx-sdk-22.0.1/";"/Library/Java/JavaVirtualMachines/javafx-sdk-22.0.1/lib"</arg>
+
 					</compilerArgs>
 				</configuration>
 			</plugin>
-			
-			
-						<!-- Exclude hanging test -->
+
+
+			<!-- Exclude hanging test -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -94,15 +122,6 @@
 				</configuration>
 			</plugin>
 
-			
-			<plugin>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-maven-plugin</artifactId>
-    <version>0.0.8</version>
-    <configuration>
-        <mainClass>hellofx/org.openjfx.App</mainClass>
-    </configuration>
-</plugin>
 		</plugins>
 	</build>
 </project>
